[project]
name = "pyreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I", "M", "N", "Q", "S", "T"]


[tool.pyright]
typeCheckingMode = "strict"
